<resources>
    <string name="app_name">Contect App</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="enter_the_adress_here">Enter the adress here</string>
    <string name="enter_the_website_here">Enter the website here</string>
    <string name="enter_the_contact_here">Enter the contact here</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="contact_app">Contact app</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>

</resources>